out/production/ProgrammingContest/autoTester.error
eulerTest\EulersNumber.java:7: error: cannot find symbol
    public static vod main(String[] args) {
                  ^
  symbol:   class vod
  location: class EulersNumber
1 error
